修改页面多个

--- a/webapp/n2Detail.html
+++ b/webapp/n2Detail.html
@@ -62,22 +62,15 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;文秘学子&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;优秀毕业生</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;教务运行公告</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">文秘学子</div>
+					<div class="nav_title">教务运行公告</div>
 					<div class="sidemenu">
 						<ul>
-							<li>
-								<h3><em></em>学习成果</h3>
-								<ul>
-									<li><a href="study.html">专业学习</a></li>
-									<li><a href="study.html">其他成果</a></li>
-								</ul>
-							</li>
-							<li class="on"><a href="student.html">优秀毕业生</a></li>
+							<li class="on"><a href="notice.html">教务运行公告</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -85,24 +78,18 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">优秀毕业生</div>
-					<div class="con_box">
-												<p>姓名：毕崇明</p>
-<p>学院：机电工程学院</p>
-<p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
+					<div class="con_title">教务运行公告</div>
+                                        <div class="con_box">
+					<ul class="items-list">
+							<li><a href="secret.html">关于2018-2019学年秋季学期公共课期末考试安排的通知</a><span class="date">2018-01-01</span></li>
+                                                        <li><a href="secret2.html">关于加强本学期期末教学与考试工作的通知</a><span class="date">2018-12-29</span></li>
+                                                        <li><a href="secret3.html">关于2018-2019学年秋季学期《形势与政策》开课选课的通知</a><span class="date">2018-11-23</span></li>
+                                                        <li><a href="secret4.html">关于校对2017-2018-2学期本科教学工作量的通知</a><span class="date">2018-11-8</span></li>
+                                                        <li><a href="secret5.html">教务系统使用说明</a><span class="date">2018-10-29</span></li>			</ul>
 
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
-
-</p>
-<p>优秀导师：陈俊</p>
-<p>邮箱：1277164523@qq.com</p>
-					</div>
-				</div>
-				<div class="clear"></div>
+                                        </div>
+                                        </div>			
+                                        <div class="clear"></div>
 			</div>
 		</div>
 		<!--footer-->
