--- a/webapp/p2Detail.html
+++ b/webapp/p2Detail.html
@@ -62,22 +62,16 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;文秘学子&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;优秀毕业生</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;师资与科研&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;师资力量</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">文秘学子</div>
+					<div class="nav_title">师资与科研</div>
 					<div class="sidemenu">
 						<ul>
-							<li>
-								<h3><em></em>学习成果</h3>
-								<ul>
-									<li><a href="study.html">专业学习</a></li>
-									<li><a href="study.html">其他成果</a></li>
-								</ul>
-							</li>
-							<li class="on"><a href="student.html">优秀毕业生</a></li>
+							<li class="on"><a href="teachers.html">师资力量</a></li>
+							<li><a href="technology.html">科研成果</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -85,21 +79,18 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">优秀毕业生</div>
+					<div class="con_title">师资力量</div>
 					<div class="con_box">
-												<p>姓名：毕崇明</p>
-<p>学院：机电工程学院</p>
-<p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
+						<p>姓名：赵翠兰</p>
+                                                <p>生日：1974年12月生</p>
+						<p>学历：博士，副教授</p>
+<p>教学背景：2015年评为青岛大学卓越人才，曾任小学教育系教研室主任，现就职于青岛大学师范学院教育学系。主要从事教育社会学、语言社会学、特殊儿童语言领域教育的研究。近年来在《教育研究》、《教育学报》、《教育研究与实验》等专业学术刊物发表科研论文近二十篇，主持教育部人文社科项目《农民工子女自我认同及其教育策略研究—语言公正之维》，山东省教育科学规划项目《社会转型期农民工家庭成员流动对其子女社会性发展的影响及策略研究》，参与教育部人文社科重大攻关项目“我国教育改革和发展的社会支持系统研究”之子课题“体制支持研究”工作。获省市级奖项2项。
 
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
+担任研究生《教育学原理》、《教育科研方法》、《人文教育》等课程，本科生《教育社会学》、《教育学》、《课程与教学论》、《中外国教育史》等课程的教学工作。
 
 </p>
-<p>优秀导师：陈俊</p>
-<p>邮箱：1277164523@qq.com</p>
+<p>邮箱： Email: qdulichuanjun@163.com/p>
+<p>教学专业：社会教育学</p>
 					</div>
 				</div>
 				<div class="clear"></div>
