--- a/webapp/p3Detail.html
+++ b/webapp/p3Detail.html
@@ -62,22 +62,16 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;文秘学子&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;优秀毕业生</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;师资与科研&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;师资力量</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">文秘学子</div>
+					<div class="nav_title">师资与科研</div>
 					<div class="sidemenu">
 						<ul>
-							<li>
-								<h3><em></em>学习成果</h3>
-								<ul>
-									<li><a href="study.html">专业学习</a></li>
-									<li><a href="study.html">其他成果</a></li>
-								</ul>
-							</li>
-							<li class="on"><a href="student.html">优秀毕业生</a></li>
+							<li class="on"><a href="teachers.html">师资力量</a></li>
+							<li><a href="technology.html">科研成果</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -85,21 +79,15 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">优秀毕业生</div>
+					<div class="con_title">师资力量</div>
 					<div class="con_box">
-												<p>姓名：毕崇明</p>
-<p>学院：机电工程学院</p>
-<p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
-
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
-
+						<p>姓名：王晶莹</p>
+                                                <p>生日：1980年出生</p>
+						<p>学历：双博士后，教授，博士生导师</p>
+<p>教学背景：主要从事课程与教学论（科学教育）和教师教育的国际比较研究。2009年博士毕业于华东师范大学比较教育学专业，博士期间曾在美国伊利诺理工大学科学教育专业联合培养。2011年到2015年曾在中国科普研究所和台湾师范大学从事博士后研究工作。2013年至2017年上半年，在国际社会科学引文索引SSCI刊物Computers & Education, Computers in Human Behavior, British Journal of Educational Technology, Interactive Learning Environments等发表文章14篇，一区顶尖刊物10篇；以第一作者第一单位计算，2015年到2017年上半年发表7篇，一区顶尖刊物3篇；2012年到2017年上半年在国内学术刊物发表50余篇，其中第一作者CSSCI文章12篇，出版专著两部，参编英文专著一部。主持有国家自然科学基金、11部委联合国家重大课题、科技部专项、教育部人文、教育部重点课题、省社科基金重点、省教育科学规划重点、台湾科技延揽人才项目等。2011年获得全国百篇优秀博士学位论文提名奖，2013年获得省教育科学研究优秀成果一等奖，同年还获得全国高等教育学会优秀科研成果一等奖，专著《科学探究论》2016年获得第五届全国教育科学研究优秀成果二等奖。
 </p>
-<p>优秀导师：陈俊</p>
-<p>邮箱：1277164523@qq.com</p>
+<p>邮箱： Email: woaiwojia@163.com/p>
+<p>教学专业：教育学</p>
 					</div>
 				</div>
 				<div class="clear"></div>
