--- a/webapp/pDetail.html
+++ b/webapp/pDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -81,13 +81,18 @@
 				<div class="right_content">
 					<div class="con_title">师资力量</div>
 					<div class="con_box">
-						<p>姓名：</p>
-						<p>学历：</p>
-<p>教学背景：</p>
-<p>评级：</p>
-<p>手机号：</p>
-<p>邮箱：</p>
-<p>教学专业：</p>
+						<p>姓名：李福华</p>
+                                                <p>生日：1963年生</p>
+						<p>学历：教授、博士生导师</p>
+<p>教学背景：2001年毕业于北京师范大学教育经济与管理专业，获博士学位。现任青岛大学师范学院院长、青岛教育发展研究院常务副院长。兼任中国教育经济学研究会常务理事、中国院校研究会理事、青岛市经济学会副会长，享受国务院政府特殊津贴。
+
+主持国家自然科学基金项目“教育研究、教育决策、教育实践的界面管理与协同效应”、“高等学校绩效工资的激励效应与制度设计研究”；教育部人文社科项目“教师薪酬标准与分配模式研究”、“中美高等学校发展规划制定与实施的比较研究”；全国教育科学规划项目“高等学校人才柔性流动研究”、“大学治理的理论基础与组织架构”、“繁荣高等学校人文社会科学的管理创新研究”、国家软科学重点项目“生态关系视角下高新区与科技新城互动发展战略研究”等科研课题；
+
+在《教育研究》、《高等教育研究》、《比较教育研究》、《清华大学教育研究》、《教育发展研究》、《教育与经济》、《北京师范大学学报》（社科版）等杂志发表论文50余篇，被《新华文摘》、人大复印资料《教育学》、《高等教育》、《管理科学》转载18篇；获山东省社科二等奖5项、青岛市社科成果一等奖2项、山东省高等学校优秀成果一等奖1项、山东省软科学优秀成果一等奖1项；出版个人学术专著《大学治理与大学管理》、《高等学校薪酬管理研究》、《大学治理的理论基础与组织架构》、《高等学校资源利用效率研究》等。
+</p>
+<p>联系电话：13969712218</p>
+<p>邮箱： mingdaxinli@sina.com</p>
+<p>教学专业：心理学</p>
 					</div>
 				</div>
 				<div class="clear"></div>
