--- a/webapp/secret2.html
+++ b/webapp/secret2.html
@@ -80,14 +80,26 @@
 				<div class="right_content">
 					<div class="con_title">教务处运行公告</div>
 					<div class="con_box">
-						<p>说明：</p>
-<p>1.未标备注的均为笔试。笔试考试时间：上午为8:30至10:30，下午为14:30至16:30，晚上为19:00至21:00；考试地点见个人教务系统“考试安排”页面。</p>
-<p>2.上机考试时间地点及考生分组安排见附件。</p>
-<p>3.本次期末考试公共课笔试采用系统自动排考方式生成考堂。学生须于1月7日前登陆教务系统——考务管理——考试安排，查看各门课的教室、考试时间和座位号，并需牢记，按时对号入座。未选课的学生不得参加考试。</p>
-<p>4.英语笔试、思想道德修养与法律基础、马克思主义基本原理概论使用答题卡答题，请考生自备2B铅笔。注意在答题卡指定区域作答、不得超出边框、不得在非指定区域做任何标记，切勿折叠答题卡。试卷中的“考号”即为“学号”。</p>
-<p>5.体育课应在第18周内完成考试。</p>
-<p>6.2013级结业学生可以随本次期末考试补考，符合条件的参军保留学籍学生可以参加本次考试（现役军人参加学习活动的管理规定），须于1月7日前向学院（专业课）或教务处（公共课）提出申请。</p>
-<p>2019年1月1日</p>
+						<p>一、加强教学运行秩序管理</p>
+<p>课堂教学要严格按照教学计划和课程安排进行，要上足学时，不允许提前结课、提前考试和提前放假。各单位应加强期末的课堂教学监督检查，严格按照《教学工作规程》、《关于进一步加强教学秩序管理的通知》等文件的要求，确保期末教学工作规范、有序。</p>
+<p>二、提高对期末考试工作的认识</p>
+<p>期末考试涉及学生、教师人数多，时间跨度长，属于问题易发环节。做好期末考试管理是保证教学秩序稳定的必要条件，各教学单位应进一步提高认识，以对学生、对教师、对学校高度负责的态度，高度重视考试组织与管理工作，要健全机构、完善制度、明确职责，做到宣传到位、贯彻到位、落实到位，确保考试工作严肃认真、规范有序开展，确保学校教学工作平稳有序。</p>
+<p>三、加强期末考试的组织领导</p>
+<p>学校成立本科期末考试工作领导小组，由分管校长任组长，成员由教务处处长、学院院长和教学部主任组成。领导小组负责统筹指导期末考试工作。
+
+教务处成立由处长任组长、分管处长和相关科室人员任成员的学校考试工作小组。
+</p>
+<p>四、加强考前教育，严肃考风考纪</p>
+<p>1.各学院要做好整个考试过程的宣传教育工作，充分利用各种宣传工具把考风考纪宣传切实做到位。要在明显位置悬挂宣传条幅或制作宣传板，以适当形式进行考风考纪教育，营造良好的考试氛围。</p>
+<p>2.学生必须持有效证件（学生证或身份证）参加考试。禁止学生将与考试无关的物品带入考场，要特别强调“携带与考试内容有关的材料或手机等具有信息收发功能的设备进入考场即认定为作弊”。</p>
+<p>3.学院要向学生公布教务处违纪举报信箱jwk@mail.qfnu.edu.cn。</p>
+<p>4.学院应使用含违规代码的考场记录表，由监考教师记录违纪行为代码。考试结束后复印有违纪记录的考场记录表并加盖学院公章后交教务处汇总统一移交学生处处理。</p>
+<p>五、加强监督检查</p>
+<p>考试期间，学校领导将到各学院了解情况，重点检查考试环境、监考人员履行职责情况和学生的考风考纪，学校教学督导委员会也将对考试的各项工作进行巡视检查。
+
+学院考试工作小组应加强考试期间的巡视检查，及时纠正和解决考试过程中出现的问题，并对当天考试情况进行总结分析，在一定范围内进行信息通报。
+</p>
+<p>2018年12月29日</p>
 
 					</div>
 				</div>
