--- a/webapp/secret3.html
+++ b/webapp/secret3.html
@@ -62,22 +62,15 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;文秘学子&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;优秀毕业生</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;教务处</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">文秘学子</div>
+					<div class="nav_title">教务处</div>
 					<div class="sidemenu">
 						<ul>
-							<li>
-								<h3><em></em>学习成果</h3>
-								<ul>
-									<li><a href="study.html">专业学习</a></li>
-									<li><a href="study.html">其他成果</a></li>
-								</ul>
-							</li>
-							<li class="on"><a href="student.html">优秀毕业生</a></li>
+							<li class="on"><a href="n2Detail.html">教务处运行公告</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -85,21 +78,15 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">优秀毕业生</div>
+					<div class="con_title">教务处运行公告</div>
 					<div class="con_box">
-												<p>姓名：毕崇明</p>
-<p>学院：机电工程学院</p>
-<p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
+						<p>各学院</p>
+<p>根据工作安排，马克思主义学院将从第13、14周开始陆续开设《形势与政策》课若干专题，未修够八个专题的学生，可以选课。具体专题课堂和上课时间地点，请在教务系统选课模块查询。</p>
+<p>选课采取“直选”模式，“先到先得”。选课系统于11月24日10:00开放选课，25日16:00时结束。</p>
+<p>请各学院及时通知学生，并指导学生按培养方案要求选课。</p>
+<p> 培养方案中要求形势与政策课程共2学分。每学期大约会开设5、6个专题，每个专题0.25学分（因系统小数支持问题仅显示为0.2），要求学生在毕业前获得8个专题的合格成绩（待获得8个专题合格成绩后，系统将以“形势与政策实践”的形式补上0.4学分，最终8个专题共2学分）。</p>
+<p>2018年11月23日</p>
 
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
-
-</p>
-<p>优秀导师：陈俊</p>
-<p>邮箱：1277164523@qq.com</p>
 					</div>
 				</div>
 				<div class="clear"></div>
@@ -111,8 +98,8 @@
 			<div class="footer">
 				<div class="f_left">
 					<div class="contact">
-						<p><a href="contact.html">联系我们</a><a href="javascrip:void(0);">站长统计</a></p>
-						<p>XX校区&nbsp;&nbsp;&nbsp;&nbsp;所在地址：XXXXXXXXXXXX</p>
+						<p><a href="contact">联系我们</a><a href="javascrip:void(0);">站长统计</a></p>
+						<p>XX校区&nbsp;&nbsp;&nbsp;&nbsp;所在地址：XXXXXXXXXXXXX</p>
 						<p>版权所有：  XX大学&nbsp;&nbsp;&nbsp;&nbsp;电话：029-8888888&nbsp;&nbsp;&nbsp;&nbsp;</p>
 					</div>
 				</div>
