--- a/webapp/secret4.html
+++ b/webapp/secret4.html
@@ -80,15 +80,22 @@
 				<div class="right_content">
 					<div class="con_title">教务处运行公告</div>
 					<div class="con_box">
-						<p>说明：</p>
-<p>1.未标备注的均为笔试。笔试考试时间：上午为8:30至10:30，下午为14:30至16:30，晚上为19:00至21:00；考试地点见个人教务系统“考试安排”页面。</p>
-<p>2.上机考试时间地点及考生分组安排见附件。</p>
-<p>3.本次期末考试公共课笔试采用系统自动排考方式生成考堂。学生须于1月7日前登陆教务系统——考务管理——考试安排，查看各门课的教室、考试时间和座位号，并需牢记，按时对号入座。未选课的学生不得参加考试。</p>
-<p>4.英语笔试、思想道德修养与法律基础、马克思主义基本原理概论使用答题卡答题，请考生自备2B铅笔。注意在答题卡指定区域作答、不得超出边框、不得在非指定区域做任何标记，切勿折叠答题卡。试卷中的“考号”即为“学号”。</p>
-<p>5.体育课应在第18周内完成考试。</p>
-<p>6.2013级结业学生可以随本次期末考试补考，符合条件的参军保留学籍学生可以参加本次考试（现役军人参加学习活动的管理规定），须于1月7日前向学院（专业课）或教务处（公共课）提出申请。</p>
-<p>2019年1月1日</p>
-
+						<p>各有关单位：</p>
+<p>2017-2018-2学期本科教学工作量以教务系统排选课结果为基础，经教务处导出、计算、制表，现发给各单位（请各学院教务老师QQ联系教务处熊吉忠老师发送数据表），请各单位进行核对、补充、审核后交教务处。计算说明及校对要求如下：</p>
+<p>一、计算公式说明</p>
+<p>1.课程工作量计算公式：上课周数*持续节次*min(1.5,max(课程性质系数,课程性质系数+(选课人数-标准班人数)*调整系数))*授课方式系数*双语课系数。</p>
+<p>2.实践工作量计算公式：指导学生数（天数）*相关类型系数。</p>
+<p>标准班人数、课程性质系数、调整系数、实践环节类型系数等具体数据可查看《本科教学工作量计算及酬金划拨办法》（校字［2012］170号）文件，或者核对表里面的“课程类型”表。</p>
+<p>二、需要校对的内容</p>
+<p>由于当前教务系统排选课环节获取的数据与工作量所需参数不完全相符，因此部分数据需要更正或补充。请各单位负责教务老师先根据学院所掌握的信息进行初步修改后再发给学院教师进行核对。注意不要改变表格结构，课程类型、授课方式、是否双语栏目内容通过下拉菜单选择。</p>
+<p>1.在系统里面缺少排课信息，导出的数据持续节次为0的课程，如果实际已经开课，请补充持续节次信息。</p>
+<p>2.专业见习、专业实习、生产实习三项实践内容，教务系统导出的数据为选课人数，根据工作量计算办法，需要修改为教师所指导的天数。</p>
+<p>3.根据《师范生实习支教工作管理办法》（校字[2018]2号）文件规定，指导教师完成一学期实习支教指导工作，按照原《曲阜师范大学本科教学工作量计算及酬金划拨办法》（校字[2012]170号）文件所规定的教育实习工作量计算标准的两倍计算，每生记10个教学工作量，即：把指导学生数填写为实际指导人数的两倍。如有其他指导一学期实习工作的情况可参照填写。</p>
+<p>4.需要补充教师指导大创项目、省级以上竞赛数量。信息填写开课单位、教师号、教师名、课程类型、项目数四个字段，注意“人数/天数/项目数”这个字段填项目数，不要填比赛人数！填报项目参照《教学建设成果奖励管理办法》[2018]28号文件附件2：学生竞赛项目所规定内容。</p>
+<p>5.根据实际情况修改“授课方式（包班、主讲、辅导）”、“是否双语（是、否）”两个字段内容。</p>
+<p>三、数据返回及存档</p>
+<p>请学院教务老师11月15日下午5:00前把核对修改后的EXCEL表发送到邮箱：40980302@qq.com。教务处会将校对后的数据重新计算并打印纸质签字表发给各学院，经学院签字盖章后留教务处存档。同时把校对后的数据添加到总工作量数据库和教务处网站工作量查询数据库，老师们可自行输入姓名和身份证号查询。</p>
+<p> 2018年11月8日</p>
 					</div>
 				</div>
 				<div class="clear"></div>
