--- a/webapp/secret5.html
+++ b/webapp/secret5.html
@@ -62,22 +62,15 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;文秘学子&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;优秀毕业生</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;教务处</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">文秘学子</div>
+					<div class="nav_title">教务处</div>
 					<div class="sidemenu">
 						<ul>
-							<li>
-								<h3><em></em>学习成果</h3>
-								<ul>
-									<li><a href="study.html">专业学习</a></li>
-									<li><a href="study.html">其他成果</a></li>
-								</ul>
-							</li>
-							<li class="on"><a href="student.html">优秀毕业生</a></li>
+							<li class="on"><a href="n2Detail.html">教务处运行公告</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -85,22 +78,13 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">优秀毕业生</div>
+					<div class="con_title">教务处运行公告</div>
 					<div class="con_box">
-												<p>姓名：毕崇明</p>
-<p>学院：机电工程学院</p>
-<p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
-
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
-
-</p>
-<p>优秀导师：陈俊</p>
-<p>邮箱：1277164523@qq.com</p>
-					</div>
+						<p>教务系统可以通过三种方式登录：</p>
+<p>1.教师、学生可以通过学校信息门户登录，使用信息门户的账号。</p>
+<p>2.学生可以不经过信息门户，使用这两个地址登录： http://202.194.188.23 或http://202.194.188.17 。注意该地址的密码和门户不同，默认的账号为学号，原始密码为身份证号后六位，登录后尽快在个人信息里修改，该密码只对这两个地址登录教务系统有效，与学校信息门户无关。</p>
+<p>3.学生也可以使用手机app登录</p>
+<p>2018-10-29</p>				</div>
 				</div>
 				<div class="clear"></div>
 			</div>
@@ -111,8 +95,8 @@
 			<div class="footer">
 				<div class="f_left">
 					<div class="contact">
-						<p><a href="contact.html">联系我们</a><a href="javascrip:void(0);">站长统计</a></p>
-						<p>XX校区&nbsp;&nbsp;&nbsp;&nbsp;所在地址：XXXXXXXXXXXX</p>
+						<p><a href="contact">联系我们</a><a href="javascrip:void(0);">站长统计</a></p>
+						<p>XX校区&nbsp;&nbsp;&nbsp;&nbsp;所在地址：XXXXXXXXXXXXX</p>
 						<p>版权所有：  XX大学&nbsp;&nbsp;&nbsp;&nbsp;电话：029-8888888&nbsp;&nbsp;&nbsp;&nbsp;</p>
 					</div>
 				</div>
