--- a/webapp/rDetail.html
+++ b/webapp/rDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -62,18 +62,15 @@
 		<div class="i_content">
 			<div class="adr_wrap">
 				<div class="adr">
-					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;资源共享&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;技能类</span>
+					<span class="adr_link"><a href="index.jsp">首   页</a>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;最新通知</span>
 				</div>
 			</div>
 			<div class="c_area">
 				<div class="left_list">
-					<div class="nav_title">资源共享</div>
+					<div class="nav_title">最新通知</div>
 					<div class="sidemenu">
 						<ul>
-							<li class="on"><a href="resource.html">技能类</a></li>
-							<li><a href="resource.html">法文类</a></li>
-							<li><a href="resource.html">其他</a></li>
-							<li><a href="resource.html">探秘天下</a></li>
+							<li class="on"><a href="notice.html">最新通知</a></li>
 						</ul>
 					</div>
 					<div class="contact">
@@ -81,14 +78,12 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">技能类</div>
-					<div class="con_box">
-						<div class="r_title">党政机关公文处理工作条例</div>
-						<p>秘书是领导者、主事者身边的综合辅助者和公务服务者，是以辅助决策、综合协调、沟通信息、办文办会办事等为主要职能活动的领导者、决策者的参谋助手。秘书学是以秘书工作为研究对象，研究其主体与客体及其相互关系的一门学科。它研究秘书工作的产生与发展、职能与环境、性质与作用、规律与特征、原则与要求、程序与环节、方法与艺术、机构与人员，以及秘书工作规范化、科学化、现代化的发展趋势等问题，以促进秘书工作适应社会发展的需要。</p>
-						<p>秘书是领导者、主事者身边的综合辅助者和公务服务者，是以辅助决策、综合协调、沟通信息、办文办会办事等为主要职能活动的领导者、决策者的参谋助手。秘书学是以秘书工作为研究对象，研究其主体与客体及其相互关系的一门学科。它研究秘书工作的产生与发展、职能与环境、性质与作用、规律与特征、原则与要求、程序与环节、方法与艺术、机构与人员，以及秘书工作规范化、科学化、现代化的发展趋势等问题，以促进秘书工作适应社会发展的需要。</p>
-					</div>
-				</div>
-				<div class="clear"></div>
+					<div class="con_title">2017级外语学院新生入学</div>
+                                        <div class="con_box">
+					<video width="800" height="602" controls autoplay> <source src="movie.ogg" type="video/ogg"> <source src="assets/2.mp4" type="video/mp4"> <source src="movie.webm" type="video/webm"> <object data="movie.mp4" width="320" height="240"> <embed width="320" height="240" src="movie.swf"> </object></video>
+                                        </div>
+                                        </div>			
+                                        <div class="clear"></div>
 			</div>
 		</div>
 		<!--footer-->
