--- a/webapp/st2Detail.html
+++ b/webapp/st2Detail.html
@@ -87,18 +87,18 @@
 				<div class="right_content">
 					<div class="con_title">优秀毕业生</div>
 					<div class="con_box">
-												<p>姓名：毕崇明</p>
+												<p>姓名：仇翔玉</p>
 <p>学院：机电工程学院</p>
 <p>专业：机电工程</p>
-<p>年级：2015级</p>
-<p>政治面貌：共青团员</p>
-<p>科研成果：山东省邹城市人民政府承办的第十七届全国大学生机器人大赛（Robocon）获得全国三等奖。</p>
-<p>科研背景：本次比赛以“飞龙绣球”为主题，共有来自西安交通大学、东北大学、四川大学、厦门大学、北京航空航天大学、武汉大学等全国74所知名高校的近3000名大学生选手参加。 
+<p>年级：2014级</p>
+<p>政治面貌：中国共产党党员</p>
+<p>科研成果：第六届全国三维数字化创新设计大赛现场总决赛团队获得工业与工程方向全国二等奖</p>
+<p>科研背景：本届全国3D大赛由中国科学技术协会、科技部高新技术发展及产业化司、教育部科技司发起主办，大赛设数字建筑BIM方向、工业与工程方向、数字表现方向、企业命题项目等，覆盖了3D应用的各个领域和方向，共吸引了全国共计30个省/自治区/直辖市879所高校、培训机构的师生及1000多家企业的技术人员报名参赛，初赛参赛人数超过100万人。按照大赛规则及赛程安排，经初赛、复赛、网络公示、作品资格审查、赛区专家评审等环节，各赛区选拔产生400多个团队（院校/单位），代表30个赛区参加全国现场总决赛。
 
-全国大学生机器人大赛(Robocon)是亚太大学生机器人大赛的国内选拔赛，该项赛事是由亚洲广播联合会(ABU)在2002年发起的一个大学生机器人创意和制作比赛，成为在全国高校范围内极具影响的大学生科技创新赛事品牌，为激发大学生创新精神、培育大学生创新能力、推动机器人知识普及做出了开创性的贡献。 
+在此前举行的山东赛区选拔赛中，由我院组成的9支代表队共荣获山东省特等奖2项，一等奖6项，二等奖1项。
 
 </p>
-<p>优秀导师：陈俊</p>
+<p>优秀导师：石青</p>
 <p>邮箱：1277164523@qq.com</p>
 					</div>
 				</div>
