--- a/webapp/student.html
+++ b/webapp/student.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -90,7 +90,10 @@
 					<div class="con_box">
 						<ul class="img-list">
 							<li>
-								<a href="stDetail.html"><img src="images/n6.jpg" /><b>XX</b></a>
+								<a href="stDetail.html"><img src="images/n6.jpg" /><b>毕崇明</b></a>
+							</li>
+<li>
+								<a href="st2Detail.html"><img src="images/n6.jpg" /><b>仇翔玉</b></a>
 							</li>
 						</ul>
 						<div class="clear"></div>
