Revert "修改页面多个"
This reverts commit 2e744e4a2498961c80ac674ab138b37dde918d72.

--- a/webapp/nDetail.html
+++ b/webapp/nDetail.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -78,12 +78,20 @@
 					</div>
 				</div>
 				<div class="right_content">
-					<div class="con_title">2014级的毕业季</div>
-                                        <div class="con_box">
-					<video width="800" height="602" controls autoplay> <source src="movie.ogg" type="video/ogg"> <source src="assets/video.mp4" type="video/mp4"> <source src="movie.webm" type="video/webm"> <object data="movie.mp4" width="320" height="240"> <embed width="320" height="240" src="movie.swf"> </object></video>
-                                        </div>
-                                        </div>			
-                                        <div class="clear"></div>
+					<div class="con_title">最新通知</div>
+					<div class="con_box">
+						<div class="r_title">科研成果名称科研成果名称科研成果名称科研成果名称<p>发布时间：2016-05-05</p></div>
+						<p>秘书是领导者、主事者身边的综合辅助者和公务服务者，是以辅助决策、综合协调、沟通信息、办文办会办事等为主要职能活动的领导者、决策者的参谋助手。秘书学是以秘书工作为研究对象，研究其主体与客体及其相互关系的一门学科。它研究秘书工作的产生与发展、职能与环境、性质与作用、规律与特征、原则与要求、程序与环节、方法与艺术、机构与人员，以及秘书工作规范化、科学化、现代化的发展趋势等问题，以促进秘书工作适应社会发展的需要。</p>
+						<p>秘书是领导者、主事者身边的综合辅助者和公务服务者，是以辅助决策、综合协调、沟通信息、办文办会办事等为主要职能活动的领导者、决策者的参谋助手。秘书学是以秘书工作为研究对象，研究其主体与客体及其相互关系的一门学科。它研究秘书工作的产生与发展、职能与环境、性质与作用、规律与特征、原则与要求、程序与环节、方法与艺术、机构与人员，以及秘书工作规范化、科学化、现代化的发展趋势等问题，以促进秘书工作适应社会发展的需要。</p>
+						<div class="n_link">
+	                        <ul>
+	                            <li>上一条<a href="">通知名称</a><span class="date">2016-05-21</span></li>
+	                            <li>下一条<a href="">通知名称</a><span class="date">2016-05-21</span></li>
+	                        </ul>
+	                    </div>
+					</div>
+				</div>
+				<div class="clear"></div>
 			</div>
 		</div>
 		<!--footer-->
