--- a/webapp/notice.html
+++ b/webapp/notice.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -82,15 +82,53 @@
 					<div class="con_box">
 						<ul class="news-list">
 							<li>
-								<a href="nDetail.html">又是一年毕业季</a><span class="date">2018-06-15</span>
-								<p>让我们聆听她们毕业的心声<a href="nDetail.html" class="more">[查看更多]</a></p>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
+							</li>
+							<li>
+								<a href="nDetail.html">消息名称消息名称消息名称消息名称</a><span class="date">2016-05-05</span>
+								<p>消息内容消息内容消息，内容消息内容消息内容消息内容消息内容，消息内消息内容消息内容消息内容消息内，容消息内容消息内容消息内容消息内容消息。内容消息内容消息内容消息内容消息内容消息内容消息内容...<a href="nDetail.html" class="more">[查看更多]</a></p>
 							</li>
 						</ul>
 						<!--分页-->
 						<div class="record">
 	                        <span class="prev"><a href="">上一页</a></span>
 	                        <span class="word"><a href="">1</a></span>
-	                        <span class="sum">共1页</span>
+	                        <span class="word"><a href="">2</a></span>
+	                        <span class="word"><a href="">3</a></span>
+	                        <span class="word"><a href="">4</a></span>
+	                        <span class="word"><a href="">5</a></span>
+	                        <span class="word"><a href="">6</a></span>
+	                        <span class="next"><a href="">下一页</a></span>
+	                        <span class="sum">共6页</span>
 	                    </div>
 					</div>
 				</div>
