--- a/webapp/teachers.html
+++ b/webapp/teachers.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -83,13 +83,7 @@
 					<div class="con_box">
 						<ul class="img-list">
 							<li>
-								<a href="pDetail.html"><img src="images/n6.jpg" /><b>李福华老师</b></a>
-							</li>
-<li>
-								<a href="p2Detail.html"><img src="images/n6.jpg" /><b>赵翠兰老师</b></a>
-							</li>
-<li>
-								<a href="p3Detail.html"><img src="images/n6.jpg" /><b>王晶莹老师</b></a>
+								<a href="pDetail.html"><img src="images/n6.jpg" /><b>XX老师</b></a>
 							</li>
 						</ul>
 						<div class="clear"></div>
